--- a/bloom-landing-page/package.json
+++ b/bloom-landing-page/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "i18next": "^25.5.2",
+    "i18next-http-backend": "^3.0.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-i18next": "^15.7.3",
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
